# nancy

./: .gitignore  API.md  Cargo.toml  README.md  accounts.go  example_transaction.json  gin.go  go.mod  go.sum  main.go  mongodb.go  package.json  pnpm-lock.yaml  transactions.go
api/: .gitignore  API.md  README.md  go.mod  go.sum  mongodb.go
app/: package.json  pnpm-lock.yaml
app/src/: App.vue
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src/components/: Greet.vue
cli/: README.md  go.mod  main.go
cli/cmd/: root.go
dbschema/: default.esdl
examples/: README.md  example_account_info.json  example_transaction.json
gui/: README.md  package.json  pnpm-lock.yaml  tailwind.config.cjs
gui/src/: app.html
gui/src/routes/: +layout.svelte  +page.svelte
oldserver/dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql
oldserver/src/: main.rs  transactions.rs
server/: Cargo.toml
server/dbschema/: default.esdl
server/src/: accounts.rs  api.rs  db.rs  main.rs
src/: api.md  main.rs
src-tauri/: Cargo.toml  nancy.db  tauri.conf.json
src-tauri/migrations/2024-01-09-110737_create-transactions/: down.sql  up.sql
src-tauri/migrations/2024-01-09-115427_create-accounts/: up.sql
src-tauri/migrations/2024-01-09-115429_create-users/: down.sql  up.sql
src-tauri/src/: main.rs  models.rs  schema.rs
src/routes/: +layout.svelte
