[package]
name = "nancy-server"
authors = ["wylited <wylited@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["full"] }
surrealdb = "1.0.0-beta.8"
anyhow = "1.0.68"
axum = "0.6.4"
edgedb-tokio = "0.3.0"
edgedb-derive = "0.4.0"
edgedb-protocol = "0.4.0"
