[package]
name = "nancy-server"
authors = ["wylited <wylited@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["full"] }
anyhow = "1.0.68"
axum = "0.6.4"

# get edgedb crates from the git https://github.com/edgedb/edgedb-rust
edgedb-tokio = { git = "https://github.com/edgedb/edgedb-rust" }
edgedb-derive = { git = "https://github.com/edgedb/edgedb-rust" }
edgedb-protocol = { git = "https://github.com/edgedb/edgedb-rust" }
