[package]
name = "nancy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
shuttle-axum = "0.26.0"
shuttle-runtime = "0.26.0"
tokio = "1.28.2"
chrono = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.13.1", features = ["yaml"] }
dryoc = { version = "0.5.1", features = ["serde"]}
clap = { version = "4.4.3", features = ["derive"] }
